--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "app",
   "private": true,
   "version": "0.0.0",
+  "homepage": "https://blue-0.github.io/App-de-Conversion-d-Image/",
   "type": "module",
   "scripts": {
     "dev": "vite",
